--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -34,8 +34,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-	<display-name>NICS</display-name>
-	<description>Next-Generation Incident Command System</description>
+	<display-name>SCOUT</display-name>
+	<description>Situation Awareness &amp; Collaboration Tool</description>
 
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
