more SCOUT branding

--- a/webapp/src/main/config/core.properties
+++ b/webapp/src/main/config/core.properties
@@ -55,6 +55,8 @@ feedback.topic=iweb.nics.alert.email
 feedback.email.to=recipients
 feedback.email.subject=Feedback Report from
 
+registration.help.info=SCOUT Support - scout@caloes.ca.gov
+
 # password.requirements
 #
 # The text displayed under "Password Requirements" on the registration page. Must explain
