--- a/modules/login/pom.xml
+++ b/modules/login/pom.xml
@@ -43,6 +43,9 @@
   <artifactId>login-module</artifactId>
   <packaging>jar</packaging>
   <name>NICS Login Module</name>
+  <properties>
+      <spring.version>4.1.4.RELEASE</spring.version>
+  </properties>
   
   <dependencies>
   
@@ -101,12 +104,26 @@
         <groupId>org.owasp.esapi</groupId>
         <artifactId>esapi</artifactId>
     </dependency>
-  
+
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
+
     <!-- test dependencies -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.3.7</version>
+        <scope>test</scope>
+      </dependency>
   </dependencies>
   
 </project>
