--- a/modules/login/pom.xml
+++ b/modules/login/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright (c) 2008-2016, Massachusetts Institute of Technology (MIT)
+    Copyright (c) 2008-2017, Taborda Solutions
     All rights reserved.
 
     Redistribution and use in source and binary forms, with or without
@@ -27,6 +27,7 @@
     CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
     OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
     OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+    s
 
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
@@ -42,10 +43,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-  	<groupId>edu.mit.ll.nics</groupId>
-  	<artifactId>web-modules</artifactId>
-  	<version>6.2</version>
-  	<relativePath>../pom.xml</relativePath>
+    <groupId>com.tabordasolutions.nics</groupId>
+    <artifactId>web-modules</artifactId>
+    <version>2017.1</version>
+    <relativePath>..</relativePath>
   </parent>
   
   <artifactId>login-module</artifactId>
@@ -87,12 +88,12 @@
     </dependency>
   
     <dependency>
-      <groupId>edu.mit.ll.nics.tools</groupId>
+      <groupId>com.tabordasolutions.nics.tools</groupId>
       <artifactId>sso-tools</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>edu.mit.ll.nics.tools</groupId>
+      <groupId>com.tabordasolutions.nics.tools</groupId>
       <artifactId>openam-tools</artifactId>
       <exclusions>
         <!-- exclude old servlet api -->
