Changes for JS compression using minify-maven-plugin

--- a/modules/login/pom.xml
+++ b/modules/login/pom.xml
@@ -141,5 +141,15 @@
         <scope>test</scope>
       </dependency>
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.samaxes.maven</groupId>
+                <artifactId>minify-maven-plugin</artifactId>
+                <version>1.7.6</version>
+            </plugin>
+        </plugins>
+    </build>
   
 </project>
