--- a/modules/accountinfo/pom.xml
+++ b/modules/accountinfo/pom.xml
@@ -44,7 +44,7 @@
   <artifactId>account-info-module</artifactId>
   <packaging>jar</packaging>
   <name>NICS Account Info Module</name>
-  
+
   <dependencies>
   
     <!-- test dependencies -->
@@ -53,5 +53,14 @@
       <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
-  
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.samaxes.maven</groupId>
+                <artifactId>minify-maven-plugin</artifactId>
+                <version>1.7.6</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
