--- a/modules/collabroom/pom.xml
+++ b/modules/collabroom/pom.xml
@@ -64,5 +64,15 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.samaxes.maven</groupId>
+                <artifactId>minify-maven-plugin</artifactId>
+                <version>1.7.6</version>
+            </plugin>
+        </plugins>
+    </build>
   
 </project>
