--- a/pom.xml
+++ b/pom.xml
@@ -165,13 +165,19 @@
 
   <build>
     <resources>
-      <resource>
-        <directory>src/main/js</directory>
-        <targetPath>META-INF/resources/js</targetPath>
-      </resource>
-      <resource>
-        <directory>src/main/resources</directory>
-      </resource>
+        <resource>
+            <directory>src/main/js/lib</directory>
+            <targetPath>META-INF/resources/js/lib</targetPath>
+        </resource>
+        <resource>
+            <directory>src/main/resources</directory>
+        </resource>
+        <resource>
+            <directory>src/main/js/nics/modules/</directory>
+            <excludes>
+                <exclude>**/*.js</exclude>
+            </excludes>
+        </resource>
     </resources>
 
     <pluginManagement>
@@ -186,8 +192,35 @@
           <artifactId>frontend-maven-plugin</artifactId>
           <version>1.3</version>
         </plugin>
-		<plugin>
-                    <!-- This plugin formats source files by checking and adding a copyright 
+          <plugin>
+              <groupId>com.samaxes.maven</groupId>
+              <artifactId>minify-maven-plugin</artifactId>
+              <version>1.7.6</version>
+              <!--<inherited>true</inherited>-->
+              <configuration>
+                  <webappSourceDir>${basedir}/src/main/</webappSourceDir>
+                  <webappTargetDir>${project.build.directory}/classes/META-INF/resources</webappTargetDir>
+                  <jsSourceDir>js/nics</jsSourceDir>
+                  <jsTargetDir>js/nics</jsTargetDir>
+                  <skipMerge>true</skipMerge>
+                  <nosuffix>true</nosuffix>
+                  <jsSourceIncludes>
+                      <jsSourceInclude>**/*.js</jsSourceInclude>
+                  </jsSourceIncludes>
+                  <jsEngine>CLOSURE</jsEngine>
+              </configuration>
+              <executions>
+                  <execution>
+                      <id>default-minify</id>
+                      <phase>generate-resources</phase>
+                      <goals>
+                          <goal>minify</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
+        <plugin>
+                    <!-- This plugin formats source files by checking and adding a copyright
                         header if it's missing. -->
                     <groupId>com.mycila.maven-license-plugin</groupId>
                     <artifactId>maven-license-plugin</artifactId>
@@ -218,33 +251,33 @@
                             <includes>**/Gruntfile.js</includes>
                         </includes>
                     </configuration>
-                    <inherited>false</inherited>
-                    <executions>
-                        <execution>
-                            <id>update-copyright</id>
-                            <!--<phase>generate-sources</phase>-->
-                            <phase>none</phase>
-                            <goals>
-                                <goal>format</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>verify-copyright</id>
-                            <!--Disabled by default. Replace phase with 'verify' to enable-->
-                            <phase>none</phase>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+            <inherited>false</inherited>
+            <executions>
+                <execution>
+                    <id>update-copyright</id>
+                    <!--<phase>generate-sources</phase>-->
+                    <phase>none</phase>
+                    <goals>
+                        <goal>format</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>verify-copyright</id>
+                    <!--Disabled by default. Replace phase with 'verify' to enable-->
+                    <phase>none</phase>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                </execution>
+            </executions>
                 </plugin>
-      </plugins>
+        </plugins>
     </pluginManagement>
-	<plugins>
-		<plugin>
-	        <groupId>com.mycila.maven-license-plugin</groupId>
-            <artifactId>maven-license-plugin</artifactId>
-        </plugin>
-	</plugins>
+      <plugins>
+          <plugin>
+              <groupId>com.mycila.maven-license-plugin</groupId>
+              <artifactId>maven-license-plugin</artifactId>
+          </plugin>
+      </plugins>
   </build>
 </project>
