--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
       	<artifactId>web-service-request-lib</artifactId>
       	<version>${project.version}</version>
       </dependency>
+        <dependency>
+            <groupId>org.mozilla</groupId>
+            <artifactId>rhino</artifactId>
+            <version>1.7R5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -277,6 +283,11 @@
           <plugin>
               <groupId>com.mycila.maven-license-plugin</groupId>
               <artifactId>maven-license-plugin</artifactId>
+          </plugin>
+          <plugin>
+              <groupId>com.github.bringking</groupId>
+              <artifactId>requirejs-maven-plugin</artifactId>
+              <version>2.0.4</version>
           </plugin>
       </plugins>
   </build>
