--- a/modules/report-explosives/pom.xml
+++ b/modules/report-explosives/pom.xml
@@ -57,9 +57,19 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.samaxes.maven</groupId>
-                <artifactId>minify-maven-plugin</artifactId>
-                <version>1.7.6</version>
+                <groupId>com.github.bringking</groupId>
+                <artifactId>requirejs-maven-plugin</artifactId>
+                <version>2.0.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>optimize</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <configFile>${basedir}/src/main/js/report-explosives-rs-build.js</configFile>
+                </configuration>
             </plugin>
         </plugins>
     </build>
