--- a/modules/activeusers/pom.xml
+++ b/modules/activeusers/pom.xml
@@ -55,6 +55,17 @@
   </dependencies>
 
   <build>
+      <resources>
+          <resource>
+              <directory>src/main/js</directory>
+              <excludes>
+                  <exclude>**/*.js</exclude>
+              </excludes>
+          </resource>
+          <resource>
+              <directory>src/main/resources</directory>
+          </resource>
+      </resources>
       <plugins>
           <plugin>
               <groupId>com.github.bringking</groupId>
