Changes to move requirejs optimizer config file to src/main/config

--- a/modules/collabroom/pom.xml
+++ b/modules/collabroom/pom.xml
@@ -79,7 +79,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>${basedir}/src/main/js/collabroom-rs-build.js</configFile>
+                    <configFile>src/main/config/collabroom-rs-build.js</configFile>
                 </configuration>
             </plugin>
         </plugins>
