--- a/modules/activeusers/pom.xml
+++ b/modules/activeusers/pom.xml
@@ -79,7 +79,7 @@
                   </execution>
               </executions>
               <configuration>
-                  <configFile>${basedir}/src/main/js/activeusers-rs-build.js</configFile>
+                  <configFile>src/main/config/activeusers-rs-build.js</configFile>
               </configuration>
           </plugin>
       </plugins>
