--- a/modules/incident/pom.xml
+++ b/modules/incident/pom.xml
@@ -68,7 +68,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>${basedir}/src/main/js/incident-rs-build.js</configFile>
+                    <configFile>src/main/config/incident-rs-build.js</configFile>
                 </configuration>
             </plugin>
         </plugins>
