--- a/modules/login/pom.xml
+++ b/modules/login/pom.xml
@@ -156,7 +156,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>${basedir}/src/main/js/login-rs-build.js</configFile>
+                    <configFile>src/main/config/login-rs-build.js</configFile>
                 </configuration>
             </plugin>
         </plugins>
