--- a/modules/report-fmag/pom.xml
+++ b/modules/report-fmag/pom.xml
@@ -68,7 +68,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>${basedir}/src/main/js/report-fmag-rs-build.js</configFile>
+                    <configFile>src/main/config/report-fmag-rs-build.js</configFile>
                 </configuration>
             </plugin>
         </plugins>
