--- a/modules/userprofile/pom.xml
+++ b/modules/userprofile/pom.xml
@@ -96,7 +96,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>${basedir}/src/main/js/userprofile-rs-build.js</configFile>
+                    <configFile>src/main/config/userprofile-rs-build.js</configFile>
                 </configuration>
             </plugin>
         </plugins>
