Replaced endpoint.rest with endpoint.internalrest.
Replaced endpoint.rest with endpoint.internalrest.  Variable endpoint.internalrest will forward the traffic to the internal em-api load balancer instead of going back to the domain.

--- a/modules/login/src/test/resources/test.properties
+++ b/modules/login/src/test/resources/test.properties
@@ -29,9 +29,14 @@
 #
 
 endpoint.rest=http://localhost:8080
+endpoint.internalrest=http://localhost:8080
 rabbitmq.hostname=localhost
 rabbitmq.exchange.name=iweb.amq.topic
 rabbitmq.username=guest
 rabbitmq.userpwd=guest
 private.cookie.domain=localhost
 system.name=test.local
+
+#WFSProxyServletProxy properties
+nics.proxy.baseurl=http://localhost:8080
+nics.proxy.translations=/geoserver->http://localhost:8080/geoserver,/static/uploads->http://localhost:8080/static/uploads
