Replaced endpoint.rest with endpoint.internalrest.
Replaced endpoint.rest with endpoint.internalrest.

--- a/modules/login/src/test/resources/test.properties
+++ b/modules/login/src/test/resources/test.properties
@@ -29,6 +29,7 @@
 #
 
 endpoint.rest=http://localhost:8080
+endpoint.internalrest=http://localhost:8080
 rabbitmq.hostname=localhost
 rabbitmq.exchange.name=iweb.amq.topic
 rabbitmq.username=guest
